manifests/sudoku/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sudoku
spec:
  type: ClusterIP
  selector:
    app: sudoku
  ports:
    - port: 80
      targetPort: 8080
